# pollux

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.rst  Sandbox.ipynb  fabfile.py  fabric.yaml  pyproject.toml  setup.py  users.json.dist  vulture-whitelist.py
.devcontainer/: Dockerfile  devcontainer.json
alembic/versions/: 15f481a5a7d_create_db.py
frontend/: README.md  package-lock.json  package.json  quasar.conf.js
frontend/src/: index.template.html  proxy.js  proxy.ts
frontend/src/boot/: i18n.js
frontend/src/components/: DataTable.vue
frontend/src/i18n/: de.js  en.js  fr.js  index.js  lb.js
frontend/src/layouts/: main.vue
frontend/src/pages/: data.vue  information.vue  pollen.vue
frontend/src/router/: routes.js
mars/: Dockerfile  README.rst  download.py  extract.py
mars/data/: extract.py
pollux/: __init__.py  api.py  auth.py  cache.py  cli.py  cneg.py  data.py  default_settings.py  dependencies.py  emitter.py  model.py  settings.py  stream.py  uploads.py  visualisations.py
pollux/blueprint/: main.py
pollux/datasource/: __init__.py
pollux/test/: test_emitter.py  test_main.py  test_scraper.py
pollux/test/data/: data1.html  data2.html
tests/: test_cache.py  test_cneg.py  test_http.py  test_main.py  test_scraper.py
tests/data/: data1.html  data2.html
workbooks/: Predictions.ipynb  Sandbox.ipynb  Visualisations.ipynb  workbook-meteo.ipynb  workbook.ipynb
workbooks/.ipynb_checkpoints/: workbook-checkpoint.ipynb
