[tool.poetry]
name = "pollux"
version = "0.1.0"
description = "Pollen alert service for Luxembourg"
authors = ["Michel Albert <michel@albert.lu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.1"
pandas = "^1.0.3"
seaborn = "^0.10.0"
jupyter = "^1.0.0"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint.messages_control]
disable = [
    "C0330",
    "C0326"
]

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
