[tool.poetry]
name = "pollux"
version = "0.1.0"
description = "Pollen alert service for Luxembourg"
authors = ["Michel Albert <michel@albert.lu>"]
license = "BSD"
# TODO url = "https://github.com/exhuma"

[tool.poetry.dependencies]
python = ">=3.9.0"
pandas = "1.2.4"
bcrypt = "^3.2.0"
beautifulsoup4 = "^4.9.2"
config_resolver = "^5.0.2"
flask = "^1.1.2"
pyjwt = "^1.7.1"
requests = "^2.24.0"
importlib_metadata = {version = "^2.0.0", python = "<3.8"}

[tool.poetry.scripts]
fetch_pollen_csv = "pollux.cli:fetch_csv"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
pylint = "^2.6.0"
mypy = "^0.782"

[tool.pylint.messages_control]
disable = [
    "C0330",
    "C0326"
]

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
